# ChangeLog for sci-chemistry/ccpn
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/ccpn/ChangeLog,v 1.107 2013/05/30 12:14:32 jlec Exp $

*ccpn-2.2.2_p130530 (30 May 2013)

  30 May 2013; Justin Lecher <jlec@gentoo.org> +ccpn-2.2.2_p130530.ebuild:
  Add latest python patches

  29 May 2013; Justin Lecher <jlec@gentoo.org> ccpn-2.2.2_p130318.ebuild,
  ccpn-2.2.2_p130318-r1.ebuild:
  Fix usage of new python r1 eclasses (missing PYTHON_REQUIRED_USE)

  22 Mar 2013; Justin Lecher <jlec@gentoo.org> ccpn-2.2.2_p130318-r1.ebuild:
  Cut prefix not suffix

*ccpn-2.2.2_p130318-r1 (21 Mar 2013)

  21 Mar 2013; Justin Lecher <jlec@gentoo.org> +ccpn-2.2.2_p130318-r1.ebuild:
  Fix for new python eclasses

*ccpn-2.2.2_p130318 (18 Mar 2013)

  18 Mar 2013; Justin Lecher <jlec@gentoo.org> +ccpn-2.2.2_p130318.ebuild:
  Move to new python eclasses; add latest python patches

*ccpn-2.2.2_p130213 (13 Feb 2013)

  13 Feb 2013; Justin Lecher <jlec@gentoo.org> +ccpn-2.2.2_p130213.ebuild:
  Todays Python patches

*ccpn-2.2.2_p130116 (16 Jan 2013)

  16 Jan 2013; Justin Lecher <jlec@gentoo.org> ccpn-2.2.2_p130110.ebuild,
  +ccpn-2.2.2_p130116.ebuild, metadata.xml:
  Todays python patches; fix for generic tcl/tk; drop unused local use
  description

*ccpn-2.2.2_p130110 (10 Jan 2013)

  10 Jan 2013; Justin Lecher <jlec@gentoo.org> -ccpn-2.2.2_p120829.ebuild,
  -ccpn-2.2.2_p120912.ebuild, -ccpn-2.2.2_p121012.ebuild,
  -ccpn-2.2.2_p121112.ebuild, -ccpn-2.2.2_p121119.ebuild,
  +ccpn-2.2.2_p130110.ebuild, metadata.xml:
  Todays python patches, Drop old

*ccpn-2.2.2_p121125 (25 Nov 2012)

  25 Nov 2012; Justin Lecher <jlec@gentoo.org> +ccpn-2.2.2_p121125.ebuild:
  Todays python patches, drop USE=extendnmr

*ccpn-2.2.2_p121119 (19 Nov 2012)

  19 Nov 2012; Justin Lecher <jlec@gentoo.org> +ccpn-2.2.2_p121119.ebuild:
  Todays python patch

*ccpn-2.2.2_p121112 (12 Nov 2012)
