@@ -24,6 +24,7 @@ DIST ccpn-update-2.2.2-130116.patch.xz 227144 SHA256 df7ea8439f58a32d3e9c9fe9dc1
 DIST ccpn-update-2.2.2-130213.patch.xz 228908 SHA256 45d6fde3aff5f1d4c6f324501867a4177c0500b8e427541e31c74d9fd65a220b SHA512 2ade631eb7123eb67573294debcf5ac25c47f9b68e88942e7d2680e1bd813dedbf1a9b36cba86b8bbb48378310fed6a4211eb0af7177a739b634415b80c0081a WHIRLPOOL 5ca9808940a87652ce01cf54163bad035edfa204f8dfedee7868ae7438daeebca8217cf7963788e996307164e785b2d3be2869ff509505c6f72f65db9202dab6
 DIST ccpn-update-2.2.2-130318.patch.xz 231912 SHA256 ada36dce0c715ad39ab0446a2f6462a983feb6f3dbaa966222bce42a7e2c0ece SHA512 1fa319007405ca15e97ed68a9c703203c93f0dc5a2e6b06d36b5570ac3787f250f5335eda4cc38768a5b37870aafe6cef47e5a96378747c46858040e8bfc4b61 WHIRLPOOL 0315de7b0e3f4843de56e6c7f7612b99e5feae1887832ebf0fa19dddafb4a82759b3fbcbfd17904cc2cbcc9d0daea6fe93a310732e799bc40c1ae36ec8a5e8ff
 DIST ccpn-update-2.2.2-130530.patch.xz 241280 SHA256 9d6d1e4646f45f9857128c20e892ba4469fac14d2d394efa5ea83577209ccf3b SHA512 aff279a86a9df6768c96f4e6f29cfcabc30892fa665b9bdac5f93692634d9b6702287316a790ed186753728fbb904f5d37c923473da9c5b2501ee11a11d03aac WHIRLPOOL 75a1e6c577a7d9d4501d824c5333cdbaebaaa848e4d9e826205222341eabcd984bfaf1018557eabc8af3ca0aa71f356d80e64dcb25750ece8ad8cb47272f9695
+DIST ccpn-update-2.2.2-130618.patch.xz 242764 SHA256 c605c92a547e50e64f5c97ae5eee5fab82728b1b0f1ab6170ce93f477e03096c SHA512 0b0bc5ee4860a6979d65b07fafe1747b6794a9197d28aa56f8bf121ee56a1a343f8c6cb65e7d93736afa9b3b4893d3ad692415bb75b4ce4d11b3e56033c4dc40 WHIRLPOOL bc6539af061085a03348e385527bdb4e2f79d27afd2dde5b50234a8940ff075ff58326b11371d1e5c154380f7d9cae060f2d72a57a52481990ca20ac6248b65f
 EBUILD ccpn-2.1.3.1_p100806.ebuild 5181 SHA256 c3ba268461da63ea23ee7f621a8e4837a368eb3e4c85bcc5245250fb6b377b58 SHA512 701ea90a13dc44e5bf1ea17c0f69adea56b1c14788ab79c67fa4b9726cae532998717515568045aec9bb4e1dd4c352227130115d90c50bf07e7fd132cdee385d WHIRLPOOL 898a618f95b254785739e6fab20af333cb3a44bff12cd6840d1b111f1588a60e48055e8af7ca88457173452f6acba86ebd3bada96390211bc4cd063fe4160fd5
 EBUILD ccpn-2.2.2_p121125.ebuild 4612 SHA256 08a4b0682c049a6301138ea6f24d665edb0a8d8d709ed2c2f2529aa0a5e648a1 SHA512 f8c45f0b19a721775dab3147cced933e8db969e8443c15cd2bd2a31ffc3fcd0eda95acc75a93df5d0dd51dabd80fde8311a7b02bf3f6a051bc0855cb156755a5 WHIRLPOOL 427cacc0c080197cc79a867f1cf1d5bed45cbfbb0f8c5dc6456548218895ff25023ea30090e751af78b77fffd47f87f7aac3869a8ed13aa3727f2f12bac743b1
 EBUILD ccpn-2.2.2_p130110.ebuild 4649 SHA256 53125900943ea89ba3d3483de29a240a0e7282098af869a04bc926c34f3bf51f SHA512 8406a93562897aadfefd03e098b393af5fb29f9bfde8e5727b73ceb6cbe004b73cfd97b61e942189d9fba717761b20cc4914e5c9d858f36bbdbdeea1369490e7 WHIRLPOOL 112e9cab77898ef9246b127d5ef8529948cfaf91157a25bbe39899560af8340f8e5cbd1e2a3935dae083a9291f0d569d3cc5b7588dc2029f3342ecbe5590cb0f
@@ -32,12 +33,13 @@ EBUILD ccpn-2.2.2_p130213.ebuild 4649 SHA256 bf5b16abe8e4a864b6b8629634464cc026a
 EBUILD ccpn-2.2.2_p130318-r1.ebuild 4652 SHA256 3262db63bec605e0efcf630a396d7a39465cea752a4f8ec570270f08c8fc991f SHA512 771fe7df8c2331760f461eb8a4c89fb5cf14d9447bf08b55e9307aeab184cddd680206cb043e97f22a32ae213d9825ce1222c1f96395aa696be109bc8e9955dc WHIRLPOOL 26b8f4aa5c01276398dc6843943e06f3f2ae6e32d52f0f0ae50a5b82852f90e4434ba08243ac71235fbceaee46c459b345841955ff01e3787384fce75831bb3f
 EBUILD ccpn-2.2.2_p130318.ebuild 4647 SHA256 3d0ed95475a6b6b883f30e51ab9ffd706ce28f39ec14074e2185002c9f8743b8 SHA512 3e58d869f455f7908654d3fac9384b44f2714cd83e89e1e379fecd296d8725157e0b63b4601a3dc620a21914e6e15256c7b6670afcf1f10311128dcb21f358cd WHIRLPOOL 77c622d27b69a2f87fd1ac52bcca4e5f8855af66337e87b88e56230e252566d12ab26cbaec7173fdfa92606a5f759012a96ac391be6468f717ac65061f0f754b
 EBUILD ccpn-2.2.2_p130530.ebuild 4649 SHA256 71865dc944175d9c8d89841b4f6901f228500832b0b04d27b42cbc85c229dbb1 SHA512 12841f1ebbdffb965045bd8aafe61f6cbad80faf82289ea77b4a6a0feb5957485b8146d8bbbc8b6c021a0c26684db85f7227953f89bbbeba12c789ce12cd3f49 WHIRLPOOL d22902143e22969661581581e58a2854003aefaaa665d878d69ccb24672ec5e724ed3bd3e178442724a816f9d1d5b46f3f53b29abc4c2eca8da7df67e3049b64
-MISC ChangeLog 20930 SHA256 67aa28c8ad5ae3e01d587260bb3c9a0c9b00aa05248d411581907957558621f6 SHA512 0b584530ce9df6c75df1ac8805763032b4b4003d02a027c448a3cc131c60389859cb282e320f479790051dfe4874e2dc01679756082a68657830d88ca16a7591 WHIRLPOOL 9a5ff3b9fd4db83356d70966aaa54fb02f34aaad0afd122217e3ae33afeef64a1dbb363d5193c0fa1e0d2a32c9aa013c0131bcdef3b6776bb60ee3a3c6e517d6
+EBUILD ccpn-2.2.2_p130618.ebuild 4649 SHA256 b207878c8186f25add8b44b09e0565c0659a72d55a683ba542d09184c6cc108b SHA512 5fb2620d6b12e4a94ead6158538634c5a842b097dcfedaaf570135adcdfb2d5119539c8306abd5ef43293385cf1aacfdc6e8de7e2963ed4c25ccaa727dac4945 WHIRLPOOL ac4561982960cf8d02d864112b97b00ce6af4c0b6a1190a08330a9effab7b41629d1681bdc0bf090faf3d6266549a17e9790b86b4e749b3718717b676197c2eb
+MISC ChangeLog 21076 SHA256 f7a6d90dc133a93ea0821f900c8f92feeeee9dcd52da1847f8d7ede185561af4 SHA512 b40e76a6a9c75020c33f832942b93ef9a65469bd526b50c68d29789dc40b16f2feafc9a1d983d61f501c694fbc3bc4c144221109e89cf66315e9c26a16efb0de WHIRLPOOL 45068f7a92ec37f82e820603b1f462a25c085a0e5eb744df7d4536fb65d3d92b7a6b62013657783d1b6805f272b63cf5954d8ade00639c3d5a5a0f67476403c6
 MISC metadata.xml 234 SHA256 8297e76ecd2cb828f604e9f138b263179eb84beb640215a0f60d7613eb46bb7f SHA512 0e94c0e6570a9267a39968d81c3b80680ccbc6eebb62199e4830b021a114c94a0de17ef2103cef62b7e27da1f51f225a30abb802aff82140ae6dc43366113d31 WHIRLPOOL fa6d4d90b092953b88ed3ad03e1e8c189296d268b39d13a4b4dcb78f0c4456341e3f1b44eea0860054fee43079179cb7cf7a912acf1fbe693ecdca6d9a65f081
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREKAAYFAlGnQqkACgkQgAnW8HDreRYkAgCbBExDwz/kzeMTGTb8o/tbGrYO
-zQwAniRkHMjKVDP3AzMCn8GfqIyJhU8Q
-=NATV
+iEYEAREKAAYFAlHALaIACgkQgAnW8HDreRb0CQCgpPz6s58wwzYPUA1D7tjiWkCG
+B78AnA4eLeHmKWfoXRVY2Cd3/YegK7DM
+=ltKI
 -----END PGP SIGNATURE-----
